--- a/style.css
+++ b/style.css
@@ -1,47 +1,155 @@
-* {
-  margin: 0;
+html body {
   padding: 0;
-}
-.content {
-  display: flex;
+  margin: 0;
 }
 
-
-input {
+.main {
   display: flex;
-  flex-flow: column wrap;
-  border: solid 1px blue;
-  border-radius: 3px;
+  justify-content: center;
+  width: 100vw;
+}
+
+.left-side {
+  background: url(./background.jpg);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items:center;
+  flex-grow: 1;
+  position: relative;
+  width: 60vw;
+  height: 100vh;
+  color: white;
+}
+
+.left-side div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.479);
+}
+
+.left-side img {
+  width: 10rem;
+  padding: 10px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  flex-grow: 2;
+  background-color: rgb(236, 236, 236);
+}
+
+.input { 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.123);
+  font-size: 1.2rem;
+}
+
+.let {
+  font-family: Georgia, serif;
+font-size: 20px;
+letter-spacing: 2px;
+word-spacing: 2px;
+font-weight: normal;
+text-decoration: none solid rgb(68, 68, 68);
+font-style: italic;
+font-variant: small-caps;
+text-transform: capitalize;
+}
+
+h1 {
+  color:  rgb(47, 172, 172);
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+div.submit {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  font-size: 1.2rem;
+  
+}
+
+div.header {
+  display: flex;
+  height: 20vh;
+  font-size: 1.5rem;
+  margin: 30px;
 }
 
 form {
   display: flex;
   flex-flow: row wrap;
-  width: 60%;
+  gap: 1.2rem;
 }
 
-#password:valid {
-  border: solid 1px rgb(77, 170, 30);
+label {
+  position: relative;
+  width: 10rem;
+  margin-bottom: 15px;
 }
 
-#password:invalid {
-  border: solid 1px red;
+input {
+  border-radius: 5px;
+  gap: 10px;
+  border: 1px solid rgb(185, 180, 180);
+  height: 1.5rem;
 }
 
-#confirm-password:valid {
-  border: solid 1px rgb(77, 170, 30);
+button {
+  background-color: rgb(47, 172, 172);
+  width: 180px;
+  height: 40px;
+  border-radius: 5px;
+  color: white;
+  font-size: 1rem;
 }
 
-#confirm-password:invalid {
-  border: solid 1px red;
+input:focus {
+  outline-color: rgb(47, 172, 172);;
 }
 
-.left {
-  display: flex;
-  flex-wrap: wrap;
+input:invalid {
+  outline-color: red;
 }
 
-.right {
-  display: flex;
-  flex-wrap: wrap;
+@media screen and (max-width: 850px) {
+  
+  .main{
+    flex-direction: column;
+  }
+  .left-side{
+    width: 100vw;
+    height: 20rem;
+  }
+
+  .header div, .input-section, .submit-section div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .form, form, .submit-section{
+    width: 100vw;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 505px) {
+  
+  label {
+    margin-bottom: 25px;
+  }
 }
