I've added password validation using Java script

--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@ button {
   font-size: 1rem;
 }
 
+button:hover {
+  background-color:black;
+}
+
 input:focus {
   outline-color: rgb(47, 172, 172);;
 }
